Update Blue Rabbit website: add logo, favicon, improve content and styling
- Replace navbar emoji with Blue Rabbit logo image
- Add favicon using cropped logo image
- Update hero section text with new tagline and credibility line
- Improve Results section placeholder styling with borders and shadows
- Standardize Benefits section card styling and alignment
- Add discount note and Most Popular badge to Pricing section
- Add reassurance line to How It Works section
- Update final CTA heading text
- Update brand color to #1E4FA8 throughout site
- Ensure responsive logo sizing on mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Rabbit — AI Photo Enhancements for Holiday Rentals</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="images/br-logo-final cropped.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/br-logo-final cropped.png">
+    <link rel="apple-touch-icon" href="images/br-logo-final cropped.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +17,10 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <div class="rabbit-icon">🐰</div>
-                <span class="brand-name">Blue Rabbit</span>
+                <div class="logo-container">
+                    <img src="images/br-logo-final cropped.png" alt="Blue Rabbit Logo" class="logo-img">
+                    <span class="brand-name">Blue Rabbit</span>
+                </div>
             </div>
             <div class="nav-links">
                 <a href="#results">Results</a>
@@ -32,8 +37,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Blue Rabbit — AI Photo Enhancements for Holiday Rentals</h1>
-                <p class="hero-tagline">Transform your listing photos so guests instantly choose you.</p>
-                <p class="hero-description">The single most important and powerful tweak you can make to boost bookings and revenue.</p>
+                <p class="hero-tagline">Transform your listing photos so guests instantly choose you. Clean, bright, professional images delivered in 48 hours.</p>
+                <p class="hero-credibility">Trusted by holiday cottage owners and Airbnb hosts across the UK.</p>
                 <a href="#upload" class="cta-button primary">Upload Photos</a>
             </div>
         </div>
@@ -133,6 +138,7 @@
             <div class="promo-banner">
                 <span class="promo-badge">🎉 Limited Time Offer</span>
                 <p class="promo-text">50% Early Client Discount for the first three clients</p>
+                <p class="promo-note">The 50% early client discount applies to the first three clients in exchange for permission to use their before/after images in our portfolio.</p>
             </div>
             <div class="pricing-grid">
                 <div class="pricing-card">
@@ -191,6 +197,7 @@
                     <p>Get your enhanced photos delivered via a minimalist PDF within 48 hours (or faster with Premium).</p>
                 </div>
             </div>
+            <p class="workflow-reassurance">Simple upload link provided — no technical skills required.</p>
         </div>
     </section>
 
@@ -222,7 +229,7 @@
     <section id="upload" class="cta-section">
         <div class="container">
             <div class="cta-content">
-                <h2 class="cta-title">Ready to Transform Your Photos?</h2>
+                <h2 class="cta-title">Your photos are the first thing guests notice. Let's make them unforgettable.</h2>
                 <p class="cta-description">Join the hosts who are already seeing more bookings and higher revenue.</p>
                 <a href="https://drive.google.com/drive/folders/your-folder-id" target="_blank" class="cta-button primary large">Upload Photos</a>
                 <p class="cta-note">You'll be redirected to our secure Google Drive upload folder</p>
@@ -246,4 +253,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
