Update hero section with transparent mascot image
- Replace mascot image with br-logo-final-trans.png
- Increase mascot size to 40-50% of hero width
- Position mascot on right with 10-15% overlap
- Remove background box/padding for clean floating effect
- Update gradient background (#f8fafc to #eef5ff)
- Reduce left side spacing for tighter text grouping
- Update CTA button border-radius to 8px
- Ensure Quicksand font weights (headline 700, subheadline 600)
- Improve mobile responsiveness with centered mascot

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#upload" class="cta-button hero-cta">Download the guide</a>
                 </div>
                 <div class="hero-mascot">
-                    <img src="images/br-logo-final.png" alt="Blue Rabbit Mascot" class="mascot-img">
+                    <img src="images/br-logo-final-trans.png" alt="Blue Rabbit Mascot" class="mascot-img">
                 </div>
             </div>
         </div>
