--- a/index.html
+++ b/index.html
@@ -31,17 +31,14 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <h1 class="hero-title">How to Make Your Listing Irresistible</h1>
-                    <p class="hero-subheadline">Simple upgrades that help Airbnb hosts, cottage owners, and STR managers stand out and attract more bookings.</p>
-                    <a href="#upload" class="cta-button hero-cta">Download the guide</a>
-                </div>
-                <div class="hero-mascot">
-                    <img src="images/br-logo-final-trans.png" alt="Blue Rabbit Mascot" class="mascot-img">
-                </div>
-            </div>
+        <div class="hero-content">
+            <h1>How to Make Your Listing Irresistible</h1>
+            <p>Simple upgrades that help Airbnb hosts, cottage owners, and STR managers stand out and attract more bookings.</p>
+            <a class="hero-btn" href="#">Download the guide</a>
+        </div>
+
+        <div class="hero-mascot-wrapper">
+            <img src="images/br-logo-final-trans.png" alt="Blue Rabbit Mascot" class="hero-mascot" />
         </div>
     </section>
 
