Update hero section with absolute positioned mascot
- Add hero-inner wrapper div for content structure
- Position mascot absolutely with right: -80px to overlap screen edge
- Update padding to 120px 60px 160px 60px
- Change overflow from hidden to visible
- Increase mascot size to 500px width
- Add pointer-events: none to mascot
- Update responsive styles for 900px breakpoint
- Mascot becomes static and centered on mobile

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-content">
-            <h1>How to Make Your Listing Irresistible</h1>
-            <p>Simple upgrades that help Airbnb hosts, cottage owners, and STR managers stand out and attract more bookings.</p>
-            <a class="hero-btn" href="#">Download the guide</a>
+        <div class="hero-inner">
+            <div class="hero-content">
+                <h1>How to Make Your Listing Irresistible</h1>
+                <p>Simple upgrades that help Airbnb hosts, cottage owners, and STR managers stand out and attract more bookings.</p>
+                <a class="hero-btn" href="#">Download the guide</a>
+            </div>
         </div>
 
-        <div class="hero-mascot-wrapper">
-            <img src="images/br-logo-final-trans.png" alt="Blue Rabbit Mascot" class="hero-mascot" />
-        </div>
+        <img src="images/br-logo-final-trans.png" alt="Mascot" class="hero-mascot">
     </section>
 
     <!-- Before/After Gallery -->
