Fix mascot overlap: position relative to hero-layout container
- Move mascot to be direct child of hero-layout (not inside hero-visual)
- Position using left: 44% relative to entire container
- This ensures mascot overlaps text column by ~100px
- Text stays readable with z-index: 2, mascot z-index: 1

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                 <a class="hero-btn" href="#">Download the guide</a>
             </div>
 
-            <div class="hero-visual">
-                <img src="images/br-logo-final-trans.png" alt="Blue Rabbit Mascot" class="hero-mascot">
-            </div>
+            <div class="hero-visual"></div>
+            <img src="images/br-logo-final-trans.png" alt="Blue Rabbit Mascot" class="hero-mascot">
         </div>
     </section>
 
