Add version number to verify deployments

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="hero-layout">
             <div class="hero-copy">
                 <h1>How to Make Your Listing Irresistible</h1>
+                <p style="font-size: 12px; color: #999; margin-top: -10px; margin-bottom: 20px;">Version: 84ec852</p>
                 <p>Simple upgrades that help Airbnb hosts, cottage owners, and STR managers stand out and attract more bookings.</p>
                 <a class="hero-btn" href="#">Download the guide</a>
             </div>
