Complete homepage rebuild with new copy and design
- Pure white background throughout
- 18px rounded corners and subtle shadows (0 4px 12px rgba(0,0,0,0.08))
- 80px section padding
- Removed all emojis, replaced with simple blue line icons
- Updated typography: 36-48px desktop headings, 18px body text
- 32px card padding
- Added all new sections: Who We Help, Why Better Photos Matter, What Poor Photos Cost You, ROI, Why Hosts Choose Blue Rabbit, What We Actually Do
- Updated pricing with new content
- Updated How It Works section
- Clean, minimal design with generous spacing

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             </div>
             <div class="nav-links">
                 <a href="#results">Results</a>
-                <a href="#benefits">Benefits</a>
                 <a href="#pricing">Pricing</a>
                 <a href="#how-it-works">How It Works</a>
-                <a href="#testimonials">Testimonials</a>
             </div>
         </div>
     </nav>
@@ -34,9 +32,9 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>How to Make Your Listing Irresistible</h1>
-                <p class="hero-subheadline">Simple upgrades that help Airbnb hosts, cottage owners, and STR managers stand out and attract more bookings.</p>
+                <p class="hero-subheadline">Simple upgrades that help Airbnb hosts, cottage owners, and STR managers stand out, get more clicks, and attract more bookings.</p>
                 <img src="images/br-rabbit-mobile.png" alt="Blue Rabbit Mascot" class="hero-mascot-mobile">
-                <a class="hero-btn" href="#">Get a Free Sample Photo Upgrade</a>
+                <a class="hero-btn" href="#upload">Get a Free Sample Photo Upgrade</a>
             </div>
             <div class="hero-visual">
                 <img src="images/br-rabbit-desktop.png" alt="Blue Rabbit Mascot" class="hero-mascot-desktop">
@@ -44,60 +42,83 @@
         </div>
     </section>
 
-    <!-- Who Is This For Section -->
-    <section id="who-is-this-for" class="audience-section">
+    <!-- Who We Help Section -->
+    <section id="who-we-help" class="section">
         <div class="container">
             <h2 class="section-title">Who We Help</h2>
             <div class="audience-grid">
-                <div class="audience-card">
-                    <div class="audience-icon">🏠</div>
+                <div class="card">
+                    <div class="icon-line"></div>
                     <h3>Airbnb Hosts</h3>
-                    <p>You're competing with hundreds of nearby listings. Strong photography instantly lifts you above lower-quality competitors.</p>
+                    <p>Compete visually in crowded search results. Cleaner, brighter photos help guests click your listing first.</p>
                 </div>
-                <div class="audience-card">
-                    <div class="audience-icon">🏡</div>
+                <div class="card">
+                    <div class="icon-line"></div>
                     <h3>Cottage Owners</h3>
-                    <p>Your website visitors decide in seconds. Clean, bright, welcoming images help convert browsers into booked guests.</p>
+                    <p>Make cosy spaces look warm and premium. Ideal for owners relying on direct website bookings.</p>
                 </div>
-                <div class="audience-card">
-                    <div class="audience-icon">📋</div>
+                <div class="card">
+                    <div class="icon-line"></div>
                     <h3>STR Managers</h3>
-                    <p>When you manage multiple properties, consistent professional visuals build trust and justify premium nightly rates.</p>
+                    <p>Deliver consistent, professional photos across every property you manage without scheduling photographers.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Why Better Photos Matter Section -->
-    <section id="why-photos-matter" class="benefits-section">
+    <section id="why-photos-matter" class="section">
         <div class="container">
-            <h2 class="section-title">Why Upgrading Your Photos Makes an Immediate Difference</h2>
+            <h2 class="section-title">Why Better Photos Matter</h2>
             <p class="section-subtitle">A few small improvements can dramatically increase how your listing performs.</p>
             <div class="benefits-grid">
-                <div class="benefit-card">
-                    <div class="benefit-icon">👆</div>
-                    <h3>More Clicks & Views</h3>
-                    <p>Guests scroll quickly. Clean, bright photos stop the scroll and get your listing opened more often.</p>
+                <div class="card">
+                    <div class="icon-line"></div>
+                    <h3>More Clicks and Views</h3>
+                    <p>Listings with bright, well-lit photos get 40–60% more clicks in search results.</p>
                 </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">📅</div>
+                <div class="card">
+                    <div class="icon-line"></div>
                     <h3>Higher Booking Rates</h3>
-                    <p>Listings with professional-quality images consistently outperform similar listings with average photos.</p>
+                    <p>Better photos improve trust and perceived cleanliness, often increasing booking rates by 20–40%.</p>
                 </div>
-                <div class="benefit-card">
-                    <div class="benefit-icon">💰</div>
+                <div class="card">
+                    <div class="icon-line"></div>
                     <h3>More Money per Booking</h3>
-                    <p>Better visuals mean you can justify a higher nightly rate without changing anything else.</p>
+                    <p>Hosts commonly raise their nightly rate by 10–25% after upgrading visuals.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Before/After Results Section -->
-    <section id="results" class="gallery-section">
+    <!-- What Poor Photos Cost You Section -->
+    <section id="poor-photos-cost" class="section">
+        <div class="container">
+            <div class="text-block">
+                <p>Dark or dull images make spaces feel smaller.</p>
+                <p>Warm orange lighting makes rooms look dated.</p>
+                <p>Cluttered backgrounds make guests question cleanliness.</p>
+                <p>Uneven lighting creates distrust.</p>
+                <p>Guests skip listings that do not stand out visually.</p>
+                <p>Even losing one or two nights per month due to weak photography can cost hundreds every year.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- ROI Section -->
+    <section id="roi" class="section">
+        <div class="container">
+            <h2 class="section-title">Your Return on Investment</h2>
+            <div class="text-block">
+                <p>If your nightly rate is around £120, one extra night typically covers the Standard Package. Two extra nights equals profit. Better photos often enable hosts to increase their nightly rate, which accelerates ROI even further.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Real Transformations Section -->
+    <section id="results" class="section">
         <div class="container">
             <h2 class="section-title">Real Transformations</h2>
-            <p class="section-subtitle">Here are examples of typical upgrades — clearer detail, better lighting, natural colours.</p>
             <div class="gallery-grid">
                 <div class="gallery-item">
                     <div class="before-after-container">
@@ -127,40 +148,67 @@
         </div>
     </section>
 
+    <!-- Why Hosts Choose Blue Rabbit Section -->
+    <section id="why-choose" class="section">
+        <div class="container">
+            <h2 class="section-title">Why Hosts Choose Blue Rabbit</h2>
+            <div class="text-block">
+                <p>48-hour turnaround.</p>
+                <p>Works with smartphone photos.</p>
+                <p>Looks like a professional photo shoot for a fraction of the price.</p>
+                <p>Provides consistent style across all rooms.</p>
+                <p>Includes optional enhancements such as clutter removal and colour correction.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- What We Actually Do Section -->
+    <section id="what-we-do" class="section">
+        <div class="container">
+            <h2 class="section-title">How We Upgrade Your Photos</h2>
+            <div class="text-block">
+                <p>Lighting correction.</p>
+                <p>Colour balancing.</p>
+                <p>Shadow and glare removal.</p>
+                <p>Straightening and cropping.</p>
+                <p>Window light smoothing.</p>
+                <p>Sky fixes for exterior photos.</p>
+                <p>Clutter removal.</p>
+                <p>Texture and detail enhancement.</p>
+                <p>Tone harmonising across all photos.</p>
+                <p class="clarification">This is not a simple filter — it is a full multi-step enhancement process.</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Pricing Section -->
-    <section id="pricing" class="pricing-section">
+    <section id="pricing" class="section">
         <div class="container">
             <h2 class="section-title">Simple, Transparent Pricing</h2>
-            <p class="section-subtitle">Most hosts recover this investment with just one additional night booked.</p>
             <div class="pricing-grid">
                 <div class="pricing-card">
-                    <h3 class="package-name">Standard Package</h3>
-                    <div class="price">
-                        <span class="currency">£</span>
-                        <span class="amount">279</span>
-                    </div>
+                    <h3 class="package-name">Standard Package — £279</h3>
                     <ul class="package-features">
-                        <li>✓ 12 photos enhanced</li>
-                        <li>✓ AI-powered lighting & clarity improvements</li>
-                        <li>✓ Colour correction</li>
-                        <li>✓ Straightening & cropping</li>
-                        <li>✓ Delivered within 48 hours</li>
+                        <li>10 enhanced photos.</li>
+                        <li>Brightness and clarity improvements.</li>
+                        <li>Colour correction.</li>
+                        <li>Shadow balancing.</li>
+                        <li>48-hour delivery.</li>
+                        <li>Two revisions.</li>
+                        <li>One additional night booked usually covers the full cost.</li>
                     </ul>
                     <a href="#upload" class="hero-btn">Choose Standard</a>
                 </div>
                 <div class="pricing-card featured">
-                    <h3 class="package-name">Premium Package</h3>
-                    <div class="price">
-                        <span class="currency">£</span>
-                        <span class="amount">349</span>
-                    </div>
+                    <h3 class="package-name">Premium Package — £349</h3>
                     <ul class="package-features">
-                        <li>✓ 18 photos enhanced</li>
-                        <li>✓ Advanced retouching</li>
-                        <li>✓ Sky replacement (if needed)</li>
-                        <li>✓ Window glare reduction</li>
-                        <li>✓ Warmth & mood adjustments</li>
-                        <li>✓ Delivered within 48 hours</li>
+                        <li>15–18 enhanced photos.</li>
+                        <li>Everything in Standard.</li>
+                        <li>Advanced retouching.</li>
+                        <li>Removal of small marks and imperfections.</li>
+                        <li>Exterior enhancement.</li>
+                        <li>72-hour priority delivery.</li>
+                        <li>Three revisions.</li>
                     </ul>
                     <a href="#upload" class="hero-btn">Choose Premium</a>
                 </div>
@@ -169,38 +217,36 @@
     </section>
 
     <!-- How It Works Section -->
-    <section id="how-it-works" class="workflow-section">
+    <section id="how-it-works" class="section">
         <div class="container">
             <h2 class="section-title">How It Works</h2>
-            <p class="section-subtitle">A simple, stress-free process designed for busy hosts.</p>
             <div class="workflow-steps">
                 <div class="step">
                     <div class="step-number">1</div>
                     <h3>Choose a Package</h3>
-                    <p>Pick the Standard or Premium package depending on how many photos you want upgraded.</p>
+                    <p>Pick Standard or Premium and upload your photos.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
                     <h3>Upload Your Photos</h3>
-                    <p>We accept any size or resolution. Smartphone photos are fine.</p>
+                    <p>Smartphone photos work perfectly. We handle everything else.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
                     <h3>Get Your Results</h3>
-                    <p>We send your enhanced images within 48 hours — ready to use immediately.</p>
+                    <p>Receive upgraded photos within 48–72 hours, ready to upload to your listing.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Final CTA Section -->
-    <section id="upload" class="cta-section">
+    <section id="upload" class="section cta-section">
         <div class="container">
             <div class="cta-content">
                 <h2 class="cta-title">Ready to Upgrade Your Listing?</h2>
-                <p class="cta-description">Stronger photos lead to more clicks, more trust, and more bookings. Let's make your listing irresistible.</p>
+                <p class="cta-description">Stronger photos help hosts earn more money and attract more consistent bookings.</p>
                 <a href="#upload" class="hero-btn">Get a Free Sample Photo Upgrade</a>
-                <p class="cta-note">No sign-up required. See the difference for yourself first.</p>
             </div>
         </div>
     </section>
@@ -210,7 +256,6 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <div class="rabbit-icon">🐰</div>
                     <span class="brand-name">Blue Rabbit</span>
                 </div>
                 <p class="footer-text">AI Photo Enhancements for Holiday Rentals</p>
