Fix missing image references - use existing br-rabbit-desktop.png as placeholder
The images br-rabbit-camera.png, br-rabbit-laptop.png, and br-rabbit-holiday.png don't exist in the repository. Updated HTML to use br-rabbit-desktop.png as placeholder until the correct images are added.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="section-image">
-                    <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image">
+                    <img src="images/br-rabbit-desktop.png" alt="Blue Rabbit with Camera" class="mascot-image">
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="section-with-image reverse">
                 <div class="section-image">
-                    <img src="images/br-rabbit-laptop.png" alt="Blue Rabbit with Laptop" class="mascot-image">
+                    <img src="images/br-rabbit-desktop.png" alt="Blue Rabbit with Laptop" class="mascot-image">
                 </div>
                 <div class="section-content">
                     <h2 class="section-heading">How We Upgrade Your Photos</h2>
@@ -232,7 +232,7 @@
                     <a href="#upload" class="cta-button">Get a Free Sample Upgrade</a>
                 </div>
                 <div class="section-image">
-                    <img src="images/br-rabbit-holiday.png" alt="Blue Rabbit Holiday" class="mascot-image">
+                    <img src="images/br-rabbit-desktop.png" alt="Blue Rabbit Holiday" class="mascot-image">
                 </div>
             </div>
         </div>
