Update homepage with new styling and highlight cards
- Center all section titles and make them brand blue (#1E4FA8)
- Create reusable highlight card component with spark icon
- Add highlight cards to designated sections
- Update content: Why Better Photos Matter, How It Works, ROI, Real Transformations, Ready to See Difference
- Add subheading 'What Poor Photos Cost You'
- Update ROI section with expanded text
- Remove future vision line from pricing section
- All sections use pure white backgrounds
- Consistent 64px spacing

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card">
                     <h3>Cottage Owners</h3>
-                    <p>Many cottage owners rely on their own websites or repeat visitors. Enhanced photos immediately elevate perceived quality, making your property feel warmer, more spacious, and more premium.</p>
+                    <p>Many cottage owners rely on direct bookings or repeat visitors. Enhanced photos immediately elevate perceived quality, making your property feel warmer, more spacious, and more premium.</p>
                 </div>
                 <div class="card">
                     <h3>STR Managers</h3>
@@ -87,7 +87,14 @@
                         <h3>Booking Rate</h3>
                         <p>Better photos convert more browsers into guests. Small visual improvements can increase booking rates by 20 to 40 percent.</p>
                     </div>
+                    <h3 class="subheading">What Poor Photos Cost You</h3>
                     <p class="final-paragraph">Dark or unbalanced images make rooms feel smaller and less inviting, while warm lighting and visible clutter reduce guest confidence. The result is simple: more people scroll past your listing, and every scroll past is lost potential revenue. When guests feel confident and excited about your space, they book faster and your calendar fills sooner.</p>
+                    <div class="highlight-card">
+                        <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -97,6 +104,7 @@
     <section id="how-it-works" class="section">
         <div class="container">
             <h2 class="section-heading">How It Works</h2>
+            <p class="section-intro">How our simple process helps you upgrade your listing quickly.</p>
             <div class="steps-grid">
                 <div class="step">
                     <div class="step-number">1</div>
@@ -114,7 +122,12 @@
                     <p>Replace your listing photos with the upgraded versions and watch performance improve.</p>
                 </div>
             </div>
-            <p class="steps-footer">Updating your photos can start increasing performance the same week.</p>
+            <div class="highlight-card">
+                <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <p>Updating your photos can start increasing performance the same week.</p>
+            </div>
         </div>
     </section>
 
@@ -166,7 +179,12 @@
                     <p class="caption">Clutter and harsh shadows reduced guest confidence. The upgraded version improves clarity, softens lighting, and creates a more premium presentation.</p>
                 </div>
             </div>
-            <p class="future-vision">This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
+            <div class="highlight-card">
+                <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
+            </div>
         </div>
     </section>
 
@@ -179,8 +197,13 @@
                 </div>
                 <div class="column-content">
                     <h2 class="section-heading">Your ROI</h2>
-                    <p>If your nightly rate is around £120, one additional night usually covers the Standard Package. Two extra nights cover the Premium Package. Better photos often increase nightly rates by 10 to 25 percent, significantly boosting annual income.</p>
-                    <p class="future-vision">One or two extra bookings a month can completely change your annual earnings.</p>
+                    <p>Professional images are not an expense. They are an asset. Better photos increase your visibility, raise your nightly rate, and help convert more browsers into confirmed bookings. If your nightly rate is around £120, even one extra weekend booked per month can more than cover the full cost of the Standard Package. The Premium Package often pays for itself even faster, especially for larger properties or high demand locations. Clear, bright, high quality images make your property feel more inviting and immediately more valuable. This is often the easiest and fastest way to increase annual income without renovating or lowering your prices.</p>
+                    <div class="highlight-card">
+                        <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p>One or two extra bookings a month can completely change your annual earnings.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -221,7 +244,6 @@
                     <a href="#upload" class="cta-button">Choose Premium</a>
                 </div>
             </div>
-            <p class="future-vision">Most hosts earn back their investment within days of updating their listing.</p>
         </div>
     </section>
 
@@ -234,7 +256,12 @@
                     <p>Better photos lead to more clicks, more bookings, and higher income, often within days of refreshing your listing. Many hosts see stronger occupancy and more reliable revenue simply by upgrading the images they already have. Your property may be performing well now, but with professional photo enhancement it can perform even better.</p>
                     <p>Send us one photo and we will upgrade it completely free so you can see the difference for yourself before committing.</p>
                     <a href="#upload" class="cta-button">Get a Free Sample Upgrade</a>
-                    <p class="future-vision">Your next guest could choose your listing tomorrow once they see your improved photos.</p>
+                    <div class="highlight-card">
+                        <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p>Your next guest could choose your listing tomorrow once they see your improved photos.</p>
+                    </div>
                 </div>
                 <div class="column-image">
                     <img src="images/br-rabbit-holiday.png" alt="Blue Rabbit Holiday" class="mascot-image">
